# ai-meeting-notes-agent

./: .env.example  .gitignore  README.md  alembic.ini  init_db.py  main.py  model.py  pyproject.toml  requirements.txt  test1.py  test_ai.py
alembic/: env.py
alembic/versions/: 001_initial.py
app/: __init__.py  ai_service.py  auth.py  crud.py  database.py  main.py  models.py  schemas.py  websocket_manager.py
app/routers/: api.py  auth.py  websocket.py
templates/: dashboard.html  index.html  login.html  meeting.html
tests/: test_main.py  ws_test.py
